// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Field /> with <Field.Autocomplete /> matches with snapshot 1`] = `
Array [
  <div
    className="sc-bdVaJa hOgMxB"
  >
    <div
      className="k-Line"
      style={
        Object {
          "lineHeight": 1,
        }
      }
    >
      <div
        className="k-Line__item"
      >
        <label
          className="k-Label k-Label--micro"
          htmlFor="autocomplete"
          onClick={[Function]}
        >
          Label
        </label>
      </div>
    </div>
  </div>,
  <div
    className="sc-bdVaJa ggQxmM"
  >
    <div
      className="sc-chPdSV hJnoYz"
    >
      <input
        aria-activedescendant=""
        aria-autocomplete="both"
        aria-expanded={false}
        aria-owns="field-results"
        autoComplete="off"
        className="sc-kgoBCf cTLLBm"
        id="autocomplete"
        name="field"
        onBlur={[Function]}
        onChange={[Function]}
        onKeyDown={[Function]}
        placeholder="Select…"
        type="text"
      />
    </div>
  </div>,
]
`;

exports[`<Field /> with <Field.Input /> in error matches with snapshot 1`] = `
Array [
  <div
    className="sc-bdVaJa hOgMxB"
  >
    <div
      className="k-Line"
      style={
        Object {
          "lineHeight": 1,
        }
      }
    >
      <div
        className="k-Line__item"
      >
        <label
          className="k-Label k-Label--micro"
          htmlFor="input"
          onClick={[Function]}
        >
          Label
        </label>
      </div>
      <div
        className="k-Line__item"
      >
        <div
          className="k-Tooltip"
        >
          <button
            aria-describedby="tooltip"
            className="k-ButtonIcon k-ButtonIcon--tooltip--nano k-ButtonIcon--helium k-ButtonIcon--nano k-ButtonIcon--rounded"
            data-dismiss="tooltip"
            data-event="TooltipEvents__open_tooltip"
            data-for="tooltip"
            data-place="right"
            data-tip={true}
            onClick={[Function]}
            tabIndex={null}
            type="button"
          >
            <svg
              className="k-ButtonIcon__svg"
              fill="#fff"
              viewBox="0 0 6 10"
              xmlns="http://www.w3.org/2000/svg"
            >
              
              <path
                d="M1.98 8.486c0 .468.372.852.852.852a.858.858 0 1 0 0-1.716.85.85 0 0 0-.852.864zM3.552 5.63c1.32-.264 2.208-1.2 2.208-2.46C5.76 1.682 4.584.662 2.988.662c-1.2 0-2.16.624-2.748 1.488l.912.996C1.62 2.306 2.232 1.97 3 1.97c.708 0 1.332.432 1.332 1.176 0 .9-.876 1.332-1.8 1.332h-.396v2.196h1.416V5.63z"
              />
            </svg>
          </button>
          <div
            className="__react_component_tooltip place-top type-dark "
            data-id="tooltip"
            id="tooltip"
            role="tooltip"
          >
            Tooltip
          </div>
        </div>
      </div>
    </div>
  </div>,
  <div
    className="sc-bdVaJa ggQxmM"
  >
    <input
      className="sc-htpNat iVlOqv"
      disabled={false}
      id="input"
      name="field"
      placeholder="Placeholder…"
    />
  </div>,
  <div
    className="sc-bdVaJa ggQxmM"
  >
    <p
      className="sc-gZMcBi giNnHm k-u-color-error k-u-line-height-normal k-u-size-micro k-u-weight-regular"
      style={
        Object {
          "margin": 0,
        }
      }
    >
      Error!
    </p>
  </div>,
]
`;

exports[`<Field /> with <Field.Input /> matches with snapshot 1`] = `
Array [
  <div
    className="sc-bdVaJa hOgMxB"
  >
    <div
      className="k-Line"
      style={
        Object {
          "lineHeight": 1,
        }
      }
    >
      <div
        className="k-Line__item"
      >
        <label
          className="k-Label k-Label--micro"
          htmlFor="input"
          onClick={[Function]}
        >
          Label
        </label>
      </div>
      <div
        className="k-Line__item"
      >
        <div
          className="k-Tooltip"
        >
          <button
            aria-describedby="tooltip"
            className="k-ButtonIcon k-ButtonIcon--tooltip--nano k-ButtonIcon--helium k-ButtonIcon--nano k-ButtonIcon--rounded"
            data-dismiss="tooltip"
            data-event="TooltipEvents__open_tooltip"
            data-for="tooltip"
            data-place="right"
            data-tip={true}
            onClick={[Function]}
            tabIndex={null}
            type="button"
          >
            <svg
              className="k-ButtonIcon__svg"
              fill="#fff"
              viewBox="0 0 6 10"
              xmlns="http://www.w3.org/2000/svg"
            >
              
              <path
                d="M1.98 8.486c0 .468.372.852.852.852a.858.858 0 1 0 0-1.716.85.85 0 0 0-.852.864zM3.552 5.63c1.32-.264 2.208-1.2 2.208-2.46C5.76 1.682 4.584.662 2.988.662c-1.2 0-2.16.624-2.748 1.488l.912.996C1.62 2.306 2.232 1.97 3 1.97c.708 0 1.332.432 1.332 1.176 0 .9-.876 1.332-1.8 1.332h-.396v2.196h1.416V5.63z"
              />
            </svg>
          </button>
          <div
            className="__react_component_tooltip place-top type-dark "
            data-id="tooltip"
            id="tooltip"
            role="tooltip"
          >
            Tooltip
          </div>
        </div>
      </div>
    </div>
  </div>,
  <div
    className="sc-bdVaJa ggQxmM"
  >
    <input
      className="sc-htpNat fTSCbm"
      disabled={false}
      id="input"
      name="field"
      placeholder="Placeholder…"
    />
  </div>,
]
`;

exports[`<Field /> with <Field.Password /> in error matches with snapshot 1`] = `
Array [
  <div
    className="sc-bdVaJa hOgMxB"
  >
    <div
      className="k-Line"
      style={
        Object {
          "lineHeight": 1,
        }
      }
    >
      <div
        className="k-Line__item"
      >
        <label
          className="k-Label k-Label--micro"
          htmlFor="input"
          onClick={[Function]}
        >
          Label
        </label>
      </div>
      <div
        className="k-Line__item"
      >
        <div
          className="k-Tooltip"
        >
          <button
            aria-describedby="tooltip"
            className="k-ButtonIcon k-ButtonIcon--tooltip--nano k-ButtonIcon--helium k-ButtonIcon--nano k-ButtonIcon--rounded"
            data-dismiss="tooltip"
            data-event="TooltipEvents__open_tooltip"
            data-for="tooltip"
            data-place="right"
            data-tip={true}
            onClick={[Function]}
            tabIndex={null}
            type="button"
          >
            <svg
              className="k-ButtonIcon__svg"
              fill="#fff"
              viewBox="0 0 6 10"
              xmlns="http://www.w3.org/2000/svg"
            >
              
              <path
                d="M1.98 8.486c0 .468.372.852.852.852a.858.858 0 1 0 0-1.716.85.85 0 0 0-.852.864zM3.552 5.63c1.32-.264 2.208-1.2 2.208-2.46C5.76 1.682 4.584.662 2.988.662c-1.2 0-2.16.624-2.748 1.488l.912.996C1.62 2.306 2.232 1.97 3 1.97c.708 0 1.332.432 1.332 1.176 0 .9-.876 1.332-1.8 1.332h-.396v2.196h1.416V5.63z"
              />
            </svg>
          </button>
          <div
            className="__react_component_tooltip place-top type-dark "
            data-id="tooltip"
            id="tooltip"
            role="tooltip"
          >
            Tooltip
          </div>
        </div>
      </div>
    </div>
  </div>,
  <div
    className="sc-bdVaJa ggQxmM"
  >
    <div
      className="sc-fjdhpX iPinWx"
    >
      <input
        className="sc-htpNat iVlOqv sc-jzJRlG kQYqxR"
        disabled={false}
        id="input"
        name="field"
        placeholder="Placeholder…"
        type="password"
      />
      <span
        aria-pressed={false}
        className="sc-cSHVUG cvWDse"
        onClick={[Function]}
        onKeyDown={[Function]}
        tabIndex="0"
        title="Show password"
      >
        <svg
          fill="#222"
          viewBox="0 0 18 12"
          width="18"
          xmlns="http://www.w3.org/2000/svg"
        >
          
          <path
            d="M9 0C4 0 0 4 0 6s4 6 9 6 9-4 9-6-4-6-9-6zm0 10c-2.2 0-4-1.8-4-4s1.8-4 4-4 4 1.8 4 4-1.8 4-4 4z"
          />
          <circle
            cx="9"
            cy="6"
            r="2"
          />
        </svg>
      </span>
    </div>
  </div>,
  <div
    className="sc-bdVaJa ggQxmM"
  >
    <p
      className="sc-gZMcBi giNnHm k-u-color-error k-u-line-height-normal k-u-size-micro k-u-weight-regular"
      style={
        Object {
          "margin": 0,
        }
      }
    >
      Error!
    </p>
  </div>,
]
`;

exports[`<Field /> with <Field.Password /> matches with snapshot 1`] = `
Array [
  <div
    className="sc-bdVaJa hOgMxB"
  >
    <div
      className="k-Line"
      style={
        Object {
          "lineHeight": 1,
        }
      }
    >
      <div
        className="k-Line__item"
      >
        <label
          className="k-Label k-Label--micro"
          htmlFor="input"
          onClick={[Function]}
        >
          Label
        </label>
      </div>
      <div
        className="k-Line__item"
      >
        <div
          className="k-Tooltip"
        >
          <button
            aria-describedby="tooltip"
            className="k-ButtonIcon k-ButtonIcon--tooltip--nano k-ButtonIcon--helium k-ButtonIcon--nano k-ButtonIcon--rounded"
            data-dismiss="tooltip"
            data-event="TooltipEvents__open_tooltip"
            data-for="tooltip"
            data-place="right"
            data-tip={true}
            onClick={[Function]}
            tabIndex={null}
            type="button"
          >
            <svg
              className="k-ButtonIcon__svg"
              fill="#fff"
              viewBox="0 0 6 10"
              xmlns="http://www.w3.org/2000/svg"
            >
              
              <path
                d="M1.98 8.486c0 .468.372.852.852.852a.858.858 0 1 0 0-1.716.85.85 0 0 0-.852.864zM3.552 5.63c1.32-.264 2.208-1.2 2.208-2.46C5.76 1.682 4.584.662 2.988.662c-1.2 0-2.16.624-2.748 1.488l.912.996C1.62 2.306 2.232 1.97 3 1.97c.708 0 1.332.432 1.332 1.176 0 .9-.876 1.332-1.8 1.332h-.396v2.196h1.416V5.63z"
              />
            </svg>
          </button>
          <div
            className="__react_component_tooltip place-top type-dark "
            data-id="tooltip"
            id="tooltip"
            role="tooltip"
          >
            Tooltip
          </div>
        </div>
      </div>
    </div>
  </div>,
  <div
    className="sc-bdVaJa ggQxmM"
  >
    <div
      className="sc-fjdhpX iPinWx"
    >
      <input
        className="sc-htpNat fTSCbm sc-jzJRlG kQYqxR"
        disabled={false}
        id="input"
        name="field"
        placeholder="Placeholder…"
        type="password"
      />
      <span
        aria-pressed={false}
        className="sc-cSHVUG cvWDse"
        onClick={[Function]}
        onKeyDown={[Function]}
        tabIndex="0"
        title="Show password"
      >
        <svg
          fill="#222"
          viewBox="0 0 18 12"
          width="18"
          xmlns="http://www.w3.org/2000/svg"
        >
          
          <path
            d="M9 0C4 0 0 4 0 6s4 6 9 6 9-4 9-6-4-6-9-6zm0 10c-2.2 0-4-1.8-4-4s1.8-4 4-4 4 1.8 4 4-1.8 4-4 4z"
          />
          <circle
            cx="9"
            cy="6"
            r="2"
          />
        </svg>
      </span>
    </div>
  </div>,
]
`;

exports[`<Field /> with <Field.RadioButtonSet /> matches with snapshot 1`] = `
Array [
  <div
    className="sc-bdVaJa hOgMxB"
  >
    <div
      className="k-Line"
      style={
        Object {
          "lineHeight": 1,
        }
      }
    >
      <div
        className="k-Line__item"
      >
        <label
          className="k-Label k-Label--micro"
          htmlFor="option-a"
          onClick={[Function]}
        >
          Label
        </label>
      </div>
    </div>
  </div>,
  <div
    className="sc-bdVaJa ggQxmM"
  >
    <div
      className="k-RadioButtonSet"
    >
      <div
        className="k-RadioButton k-RadioButtonSet__radioButton"
      >
        <input
          className="k-RadioButton__input"
          defaultChecked={true}
          id="option-a"
          name="radio"
          type="radio"
        />
        <label
          className="k-RadioButton__label"
          htmlFor="option-a"
        >
          Option A
        </label>
      </div>
      <div
        className="k-RadioButton k-RadioButtonSet__radioButton"
      >
        <input
          className="k-RadioButton__input"
          id="option-b"
          name="radio"
          type="radio"
        />
        <label
          className="k-RadioButton__label"
          htmlFor="option-b"
        >
          Option B
        </label>
      </div>
      <div
        className="k-RadioButton k-RadioButtonSet__radioButton"
      >
        <input
          className="k-RadioButton__input"
          id="option-c"
          name="radio"
          type="radio"
        />
        <label
          className="k-RadioButton__label"
          htmlFor="option-c"
        >
          Option C
        </label>
      </div>
    </div>
  </div>,
]
`;

exports[`<Field /> with <Field.Select /> matches with snapshot 1`] = `
Array [
  <div
    className="sc-bdVaJa hOgMxB"
  >
    <div
      className="k-Line"
      style={
        Object {
          "lineHeight": 1,
        }
      }
    >
      <div
        className="k-Line__item"
      >
        <label
          className="k-Label k-Label--micro"
          htmlFor="select"
          onClick={[Function]}
        >
          Label
        </label>
      </div>
    </div>
  </div>,
  <div
    className="sc-bdVaJa ggQxmM"
  >
    <div
      className="sc-gqjmRU iCBiuU"
    >
      <div
        className="sc-VigVT hnInbO css-2b097c-container"
        id="select"
        onKeyDown={[Function]}
      >
        <div
          className="k-Select__control css-yk16xz-control"
          onMouseDown={[Function]}
          onTouchEnd={[Function]}
        >
          <div
            className="k-Select__value-container css-g1d714-ValueContainer"
          >
            <div
              className="k-Select__placeholder css-1wa3eu0-placeholder"
            >
              Select…
            </div>
            <input
              aria-autocomplete="list"
              aria-labelledby=""
              className="css-62g3xt-dummyInput"
              disabled={false}
              id="react-select-2-input"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              readOnly={true}
              tabIndex="0"
              value=""
            />
          </div>
          <div
            className="k-Select__indicators css-1hb7zxy-IndicatorsContainer"
          >
            <span
              className="k-Select__indicator-separator css-1okebmr-indicatorSeparator"
            />
            <div
              aria-hidden="true"
              className="k-Select__indicator k-Select__dropdown-indicator css-tlfecz-indicatorContainer"
              onMouseDown={[Function]}
              onTouchEnd={[Function]}
            >
              <svg
                aria-hidden="true"
                className="css-6q0nyr-Svg"
                focusable="false"
                height={20}
                viewBox="0 0 20 20"
                width={20}
              >
                <path
                  d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                />
              </svg>
            </div>
          </div>
        </div>
        <input
          name="select"
          type="hidden"
          value=""
        />
      </div>
    </div>
  </div>,
]
`;
